--- a/src/components/FilterStore/FilterStore.module.scss
+++ b/src/components/FilterStore/FilterStore.module.scss
@@ -31,10 +31,10 @@
                 font-size: 20px;
                 line-height: 26px;
                 color: #ffffff;
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-				cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                cursor: pointer;
             }
 
             .panel-content {
@@ -42,14 +42,14 @@
                 padding: 12px 0px;
 
                 .game-name {
-                    padding: 12px 20px;
+                    padding: 6px 20px;
                     cursor: pointer;
-					transition-duration: 0.35s;
-					font-size: 18px;
+                    transition-duration: 0.35s;
+                    font-size: 18px;
                     display: flex;
                     align-items: center;
 
-                    input{
+                    input {
                         border: none;
                         width: 20px;
                         height: 20px;
@@ -58,13 +58,10 @@
                         display: grid;
                         place-content: center;
                     }
-                    
-                   
-                      
-                      
+
                     &:hover {
-                        background: #bcabea;
-                        color: #402a7d;
+                        // background: #bcabea;
+                        // color: #402a7d;
                     }
 
                     .game-avatar {
@@ -77,8 +74,8 @@
                 }
 
                 .game-active {
-                    background: #bcabea !important;
-                    color: #402a7d !important;
+                    // background: #bcabea !important;
+                    // color: #402a7d !important;
                 }
             }
         }
